--- a/index.html
+++ b/index.html
@@ -220,7 +220,8 @@
             </h2>
             <div class="bg-gradient-to-br from-purple-50 to-blue-50 rounded-2xl p-8 shadow-xl border border-purple-100" data-aos="fade-up" data-aos-delay="100">
                 <p class="text-lg text-gray-700 leading-relaxed text-center">
-                    Cloud Infrastructure Engineer with hands-on experience in AWS and multi-cloud environments. Skilled in Ubuntu server management, VPN configuration, firewall rules, and troubleshooting server & network issues. Currently managing cloud projects for Rajasthan and Tripura State Electricity Board websites. Completed B-Tech in CSE (AIML) from Reva University (2025).
+                    Cloud Infrastructure Engineer with hands-on experience in AWS and multi-cloud environments. 
+                    Skilled in Ubuntu server management, VPN configuration, firewall rules, and troubleshooting server & network issues. Currently managing cloud projects for Rajasthan and Tripura State Electricity Board websites. Completed B-Tech in CSE (AIML) from Reva University (2025).
                 </p>
             </div>
         </div>
